feat(landing): update component html to show agenda in text

--- a/src/app/pages/landing/landing/landing.component.html
+++ b/src/app/pages/landing/landing/landing.component.html
@@ -1,3 +1,7 @@
-<p>
-  landing works!
-</p>
+<div>
+  <h1>Angular Show Case</h1>
+
+  <p>
+    Each page will show a part of angular production.
+  </p>
+</div>
