feat(html): add expression example

--- a/src/app/pages/landing/pages/html/html.component.html
+++ b/src/app/pages/landing/pages/html/html.component.html
@@ -1,3 +1,19 @@
-<p>
-  html works!
-</p>
+<div>
+  <h1>HTML</h1>
+  <p>
+    One of Angular's main jobs is to dynamically render html to the screen
+  </p>
+
+  <div class="part">
+    <h3>Expressions</h3>
+    This code
+    <div>
+      <code>
+        {{"{{ 2 + 3 \}\}"}}
+      </code>
+    </div>
+    will result in "{{ 2 + 3 }}" written to the screen in place of itself
+  </div>
+
+
+</div>
