feat(html): add example explaining property binding

--- a/src/app/pages/landing/pages/html/html.component.html
+++ b/src/app/pages/landing/pages/html/html.component.html
@@ -36,4 +36,18 @@
   </div>
 
 
+
+  <div class="part">
+    <h3>Bind to Properties</h3>
+    This code
+    <div>
+      <code>
+        {{"<\img [src]=\"someVariableWithPicturePath\"/>"}}
+      </code>
+    </div>
+    will result in the img displaying the image at the path.
+    <p>
+  </div>
+
+
 </div>
