feat(databaseTest): add click listener for button to run controller method

--- a/src/app/features/database-test/database-test.component.html
+++ b/src/app/features/database-test/database-test.component.html
@@ -11,5 +11,5 @@
       <input type="text" formControlName="password" placeholder="password">
     </div>
   </form>
-  <button> submit </button>
+  <button (click)="onSubmit()"> submit </button>
 </div>
