feat(appModule): add animations

--- a/src/app/features/database-test/database-test.component.html
+++ b/src/app/features/database-test/database-test.component.html
@@ -17,3 +17,12 @@
   <button (click)="onSubmit()"> submit </button>
   <button (click)="onGet()"> get </button>
 </div>
+
+<div>
+  <ng-container *ngFor="let item of array">
+    <div @fade>
+      {{item | json}}
+    </div>
+
+  </ng-container>
+</div>
